--- a/index.html
+++ b/index.html
@@ -169,8 +169,10 @@
 				<div class="row">
 					<div class="col-md-6 col-xs-11 wow fadeInLeft" data-wow-delay="0.9s">
 						<h4>TECH ENTHUSIAST &AMP; BLOGGER</h4>
-						<p>TEST5.</p>
-						<p>TEST5.</p>
+						<p>Tech Savy.</p>
+						<p>Researcher.</p>
+						<p>Factual.</p>
+						<p>Unbiased.</p>
 					</div>
 					<div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay="0.9s">
 						<span class="text-top">Research <small>95%</small></span>
