--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <?php 
 if(isset($_POST['submit'])){
 
-	$to = "email@example.com"; // this is your Email address
+	$to = "harshitkotnala5@gmail.com"; // this is your Email address
     $from = $_POST['email']; // this is the sender's Email address
     $name = $_POST['name'];
     $subject = "Form submission";
